pypy3.9: update resources and workaround to enable new setuptools
pypi_formula_mappings: add `pypy3.9` extra_packages
pypy3.9: update sha256

Signed-off-by: Patrick Linnane <patrick@linnane.io>
Signed-off-by: Michael Cho <michael@michaelcho.dev>

--- a/pypi_formula_mappings.json
+++ b/pypi_formula_mappings.json
@@ -550,6 +550,10 @@
   "pyinstaller": {
     "extra_packages": ["macholib"]
   },
+  "pypy3.9": {
+    "package_name": "",
+    "extra_packages": ["pip", "setuptools"]
+  },
   "pyqt": {
     "exclude_packages": [
       "PyQt6-3D-Qt6", "PyQt6-Charts-Qt6", "PyQt6-DataVisualization-Qt6",
