--- a/pypi_formula_mappings.json
+++ b/pypi_formula_mappings.json
@@ -598,6 +598,9 @@
     "extra_packages": ["python-lsp-black", "pylsp-mypy", "python-lsp-ruff", "pylsp-rope"],
     "exclude_packages": ["black", "mypy", "ruff"]
   },
+  "python-matplotlib": {
+    "exclude_packages": ["numpy", "pillow"]
+  },
   "python-requests": {
     "exclude_packages": ["certifi", "charset-normalizer", "idna", "urllib3"]
   },
